--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -2,15 +2,15 @@
     <span class="top-bar__button js-trigger-menu">menu</span>
     <nav class="main-menu js-target-menu main-menu--left">
       <a href="{{ '/introduction.html' | relative_url }} ">Introduction</a>
-      <a href="../cases.html">Data Collaboratives Explorer</a>
-      <a href="../canvas.html">Designing a Data Collaborative</a>
-      <a href="/static/files/framework.pdf">Data Responsibility Framework</a>
-      <a href="../events.html">Events</a>
+      <a href="{{ '/cases.html' | relative_url }}">Data Collaboratives Explorer</a>
+      <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
+      <a href="{{ '/static/files/framework.pdf' | relative_url }}">Data Responsibility Framework</a>
+      <a href="{{ '/events.html' | relative_url }}">Events</a>
       <a href="#">Current Projects</a>
-      <a href="../resources.html">Additional Resources</a>
+      <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
     </nav>
      <a class="top-bar__logo" href="/"><img src="/images/govlab-logo-white.png" alt="The GovLab"></a>
-    
+
 
 
 
