--- a/source/_layouts/case_template.html
+++ b/source/_layouts/case_template.html
@@ -110,7 +110,7 @@ layout: default
 
 <style media="screen">
   .top-section {margin-top: 50px;}
-  .top-bar {background-color: #e5c810;}
+  .top-bar {background-color: $gray;}
 </style>
 
 {% assign number = page.dataType | size  %}
