Seperate events panels

--- a/source/_sass/_events.scss
+++ b/source/_sass/_events.scss
@@ -4,7 +4,7 @@
   }
 
   .events-panels {
-    text-align: center;
+    // text-align: center;
     &__first {
       background-color: rgba(black, .1)
     }
