--- a/source/_sass/_events.scss
+++ b/source/_sass/_events.scss
@@ -21,5 +21,13 @@
       padding: 50px;
       padding-bottom: 50px;
     }
+
+    &__title {
+      border-bottom: 2px $main-color solid;
+      &:hover {
+        text-decoration: none;
+        border-bottom: 2px $main-color solid;
+      }
+    }
   }
 }
