--- a/source/_sass/_events.scss
+++ b/source/_sass/_events.scss
@@ -1,4 +1,15 @@
 .events-page {
+  background-color: rgba(black, .1);
+  &__title {
+    border-bottom: 2px $main-color solid;
+    &:hover {
+      text-decoration: none;
+      border-bottom: 2px $main-color solid;
+    }
+  }
+  h5 {
+    margin-bottom: -10px;
+  }
   .top-section {
     padding-bottom: 60px;
   }
@@ -22,12 +33,12 @@
       padding-bottom: 50px;
     }
 
-    &__title {
-      border-bottom: 2px $main-color solid;
-      &:hover {
-        text-decoration: none;
-        border-bottom: 2px $main-color solid;
-      }
-    }
+    // &__title {
+    //   border-bottom: 2px $main-color solid;
+    //   &:hover {
+    //     text-decoration: none;
+    //     border-bottom: 2px $main-color solid;
+    //   }
+    // }
   }
 }
