Add basic canvas page and js

--- a/source/_layouts/canvas_template.html
+++ b/source/_layouts/canvas_template.html
@@ -24,7 +24,7 @@ layout: default
     <div class="divider">
       <div class="row">
         <div class="large-8 large-offset-4 column">
-          <h3 class="canvas-step__title"><span class="canvas-step__step-number" >step {{ forloop.index }}</span>{{ phaseStep.stepTitle}}</h3>
+          <h3 class="canvas-step__title"><span class="canvas-step__step-number" >{{ phaseStep.stepNumber }}</span>{{ phaseStep.stepTitle}}</h3>
         </div>
       </div>
     </div>
