--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -36,6 +36,7 @@
     <script src="/scripts/slick.min.js"></script>
     <script src="/js/scripts.js"></script>
     <script src="/js/introduction.js"></script>
+    <script src="/js/canvas.js"></script>
     <script src="/js/three.js"></script>
     <script src="/js/modal.js"></script>
     <script src="/js/resource-filter.js"></script>
