--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -28,6 +28,7 @@ $gray: rgba(black, 0.7);
 @import 'canvas';
 @import 'events';
 @import 'introduction';
+@import 'modals';
 
 .material-icons {
   font-family: 'Material Icons';
