Add margin to fullpage arrows

--- a/source/_sass/_introduction.scss
+++ b/source/_sass/_introduction.scss
@@ -30,6 +30,10 @@
   opacity: .5 !important;
 }
 
+.fp-controlArrow {
+    margin: 1% !important;
+}
+
 .fp-controlArrow.fp-prev {
     left: 15px;
     width: 0;
