--- a/source/_includes/resource-modal.html
+++ b/source/_includes/resource-modal.html
@@ -1,30 +1,35 @@
 <div class="modal js-target-modal">
-    <header class="modal__header modal__header--yellow">
+    <header class="modal__header modal__header--gray">
         <i class="modal__close material-icons js-close-modal">close</i>
         <h1 class="modal__title">{{resource.title}}</h1>
     </header>
     <section class="modal__content">
-        <h3><a href="{{resource.url}}" title="{{resource.title}}">{{resource.title}}</a></h3>
+        <h3>{{resource.title}}</h3>
         <p class="result-item__authors">
           {{resource.authors}}
         </p>
 
         <!-- Publication -->
+        {% if resource.publication %}
         <div class="result-item__taxonomy result-item__taxonomy--publication">
           <span class="result-item__taxonomy__key">Publication</span>
-            <p>{{resource.publication}}</p>
+            <p>{{resource.publication | markdownify }}</p>
           </span>
         </div>
+        {% endif %}
 
         <!-- Publication Date -->
+        {% if resource.pubDate %}
         <div class="result-item__taxonomy result-item__taxonomy--publication-date">
           <span class="result-item__taxonomy__key">Publication Date</span>
           <span class="result-item__taxonomy__value">
             <p class="result-item__tag">{{resource.pubDate | date: "%Y" }}</p>
           </span>
         </div>
+        {% endif %}
 
         <!-- Resource type -->
+        {% if resource.type %}
         <div class="result-item__taxonomy result-item__taxonomy--type">
           <span class="result-item__taxonomy__key">Type</span>
           <span class="result-item__taxonomy__value">
@@ -33,14 +38,30 @@
             {% endfor %}
           </span>
         </div>
+        {% endif %}
 
-        <!-- Short Description -->
-        {% if resource.annotation == "" %}
-        <div class="result-item__short-description">
-          <p>{{resource.shortDescription }}</p>
+        <!-- URL -->
+        {% if resource.url %}
+        <div class="result-item__taxonomy result-item__taxonomy--url">
+          <span class="result-item__taxonomy__key">View Resource</span>
+            <a target="_blank" href="{{resource.url}}" title="{{resource.title}}"><i class="material-icons">launch</i></a>
+          </span>
         </div>
         {% endif %}
-        <p>{{resource.annotation}}</p>
+
+
+        <!-- Short Description -->
+        {% if resource.shortDescription %}
+        {% if resource.annotation == ""%}
+        <div class="result-item__short-description">
+          <p>{{resource.shortDescription | markdownify  }}</p>
+        </div>
+        {% endif %}
+        {% endif %}
+
+        {% if resource.annotation %}
+        <p>{{resource.annotation | markdownify }}</p>
+        {% endif %}
     </section>
     <footer class="modal__controls">
         <a class="button js-close-modal" href="#">OK</a>
