Add id to resource list to avoid webkit case list table misbehavior

--- a/source/_sass/_resources.scss
+++ b/source/_sass/_resources.scss
@@ -7,15 +7,16 @@
 
 .results-section, .results-container { padding: 0;}
 
-.list {
+#list {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  
+
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
+
 .result-item {
   font-weight: 300;
   display: inline-block;
