Link index buttons and footer links

--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -7,15 +7,15 @@
   </div>
   <div class="row expanded">
     <div class="large-4 column">
-      
+
       <nav class="footer__nav footer__panel">
-        <a href="/static/files/data-collaboratives.pdf">What is Data Collaboratives</a>
-        <a href="#">Data Collaboratives Explorer</a>
-        <a href="#">Designing a Data Collaborative</a>
-        <a href="#">Data Responsibility Framework</a>
-        <a href="#">Events</a>
+        <a href="{{ '/introduction.html' | relative_url }}">What is Data Collaboratives</a>
+        <a href="{{ '/cases.html' | relative_url }}">Data Collaboratives Explorer</a>
+        <a href="{{ '/canvas.html' | relative_url }}">Designing a Data Collaborative</a>
+        <a href="{{ '/static/files/framework.pdf' | relative_url }}">Data Responsibility Framework</a>
+        <a href="{{ '/events.html' | relative_url }}">Events</a>
         <a href="#">Improving Children’s Lives through Data Collaboratives</a>
-        <a href="#">Additional Resources</a>
+        <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
       </nav>
     </div>
     <div class="large-4 column">
@@ -34,7 +34,7 @@
     </div>
 
   </div>
-  
+
 </footer>
 
 <!-- <footer class='footer'>
