--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -4,6 +4,7 @@
 $small-only: (max-width 40em);
 $medium: 40.063em 64em;
 $large: 64.063em 90em;
+$large-up: 64.063em;
 
 $yellow: #e5c810;
 $main-color: $yellow;
