--- a/source/_sass/_resources.scss
+++ b/source/_sass/_resources.scss
@@ -92,9 +92,11 @@
   }
 
   &__name {
-    font-size: 1rem;
+    font-size: 1.3rem;
+    line-height: 1.4;
+    font-weight: 400;
     text-transform: none;
-    min-height: 3.5rem;
+    min-height: 5rem;
   }
 
   &__authors {
