--- a/source/_sass/_modals.scss
+++ b/source/_sass/_modals.scss
@@ -1,24 +1,92 @@
+// Move to styleguide
+.floating-button {
+  position: relative;
+  padding-top: 40px;
+  
+  &__wrapper {
+    bottom: -30px;
+    width: 100%;
+    position: absolute;
+    text-align: center;
+  }
+  
+}
+
+// Move to styleguide
+.button--floating {
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  padding-left: 40px;
+  padding-right: 40px;
+  font-weight: bold;
+}
+
+.button--black {
+  background-color: #333;
+
+  &:hover {
+    background-color: #666;    
+  }
+}
+
+
 .modal {
+  &--top-section {
+    background-color: $main-color;
+    padding: 0;
+
+
+    h1, h2 {
+      text-align: center;
+      width: 90%;
+      margin: 0 auto;
+      text-transform: none;
+    }
+
+    h1 {
+      font-size: 2rem;
+      padding-top: 80px;
+      font-weight: 300;
+      line-height: 1.2;
+    }
+
+    h2 {
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-top: 10px;
+      color: rgba(black, .3);
+      padding: 0 80px;
+    }
+  }
+
+  &__publication {
+    text-align: center;
+    color: white;
+    font-weight: 500;
+  }
+
+  &__resource-type {
+    float: left;
+    padding: 15px 20px;
+    
+    > span {
+      font-weight: 600;
+      text-transform: uppercase;
+      color: white;
+
+    }
+  }
+
+
   &__content {
-    margin: 0 0 0 45px;
-    padding-right: 25px;
-  }
+    padding: 45px;
 
-  &__header {
-    &--yellow {
-      background-color: $main-color;
+    &:last-child {
+      padding-bottom: 60px;
     }
-    &--gray {
-      background-color: rgba(0,0,0,0.8);
-    }
-  }
 
-  &__url {
-    font-style: italic;
-    border-bottom: 1px $main-color solid;
-    &:hover {
-      text-decoration: none;
-      border-bottom: 1px rgba(0,0,0,0.8) solid;
+    h1 {
+      font-size: 1.5rem;
+      font-weight: 400;
     }
   }
 }
