--- a/source/_sass/_events.scss
+++ b/source/_sass/_events.scss
@@ -43,22 +43,34 @@
   padding: 40px;
 }
 
+.result-item:hover {
+
+}
 
 // Styleguide this
 .result-item--event {
   display: flex;
   flex-direction: column;
+
+  &:hover {
+    background-color: white;
+    cursor: pointer;
+  }
   
   &__name {
     font-size: 1.8rem;
     font-weight: 100;
     text-transform: none;
     line-height: 1.3;
+    margin-bottom: 40px;
     flex: 1;
   }
 
-  &__date {
-    
+  &__location {
+    margin: 0;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: $main-color;
   }
 }
 
