Add filter js file

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -21,6 +21,7 @@
     <script src="/js/modernizr.js"></script>
     <script src="/scripts/list.fuzzysearch.js"></script>
     <script src="/scripts/listScripts.js"></script>
+    <script src="/scripts/filterList.js"></script>
   </head>
 
   <body>
