All tags now linking to filtered list

--- a/source/_sass/case.scss
+++ b/source/_sass/case.scss
@@ -27,7 +27,9 @@
 
       span {
         display: inline-block;
-
+        #span-link {
+          text-decoration: none;
+        }
       }
     }
 
