--- a/source/_layouts/case_template.html
+++ b/source/_layouts/case_template.html
@@ -10,15 +10,14 @@ layout: default
       <h1><span>{{page.caseStudy}}</span></h1>
       <h2>
         {% if page.dataType %}
-
           {% for item in page.dataType %}
-            <span id="data-type" class="{{item | slugify}}" onmouseover="this.style.cursor='pointer';">{{ item }}</span>
+            <span id="data-type" onmouseover="this.style.cursor='pointer';" class="{{item | slugify}}" ><a id="span-link" class="{{item | slugify}}" href="#">{{ item }}</a></span>
           {% endfor %}
         {% endif %}
 
         {% if page.sector %}
           {% for item in page.sector %}
-            <span id="data-sector" class="{{item | slugify}}" onmouseover="this.style.cursor='pointer';">{{ item }}</span>
+            <span onmouseover="this.style.cursor='pointer';" id="data-sector" class="{{item | slugify}}" ><a id="span-link"class="{{item | slugify}}" href="#">{{ item }}</a></span>
           {% endfor %}
         {% endif %}
       </h2>
