--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- Yellow footer: -->
 <footer class='footer'>
   <div class="row expanded footer--darken">
-    <div class="large-4 column"><h5 class="footer__panel">Partners</h5></div>
-    <div class="large-4 column"><h5 class="footer__panel">About</h5></div>
+    <div class="large-4 column"><h5 class="footer__panel">Sections</h5></div>
+    <div class="large-4 column"><h5 class="footer__panel footer__panel--about">About</h5></div>
     <div class="large-4 column"><h5 class="footer__panel text-align-center">Partners</h5></div>
   </div>
   <div class="row expanded">
@@ -18,8 +18,8 @@
         <a href="{{ '/resources.html' | relative_url }}">Additional Resources</a>
       </nav>
     </div>
-    <div class="large-4 column">
-      <div class="footer__text footer__panel">
+    <div class="large-4 column footer__panel--about">
+      <div class="footer__text footer__panel footer__panel--about">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium repellendus exercitationem, et ratione minus nihil eaque, a cumque, ad corrupti modi. Suscipit repellendus id, sed nihil illum iusto impedit nam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium repellendus exercitationem, et ratione minus nihil eaque, a cumque, ad corrupti modi. Suscipit repellendus id, sed nihil illum iusto impedit nam.</p>
       </div>
     </div>
