--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -21,7 +21,6 @@
     <script src="/js/modernizr.js"></script>
     <script src="/scripts/list.fuzzysearch.js"></script>
     <script src="/scripts/filterList.js"></script>
-    <script src="/scripts/listScripts.js"></script>
 
   </head>
 
@@ -41,7 +40,9 @@
     <script src="/js/canvas.js"></script>
     <script src="/js/three.js"></script>
     <script src="/js/modal.js"></script>
-    <script src="/js/resource-filter.js"></script>
+    {% if page.custom_js %}
+    <script src="/js/{{ page.custom_js }}"></script>
+    {% endif %}
 <!-- fullPage scripts -->
     <script src="/scripts/jquery.fullPage.js"></script>
     <script src="/scripts/scrolloverflow.min.js"></script>
