--- a/source/_sass/_footer.scss
+++ b/source/_sass/_footer.scss
@@ -68,12 +68,17 @@
       // left: 20px;
       // top: 170px;
       padding-left: 10px;
-      padding-right: 10px;
+      // padding-right: 10px;
       width: 160%;
+      margin-right: none;
     }
   }
 
-  &--nyu { max-width: 200px; }
+  &--nyu { max-width: 200px;
+    @include breakpoint($small-only) {
+      max-width: 180px;
+    }
+  }
   &--on {
     max-width: 70%;
     @include breakpoint($small-only) {
