--- a/source/_sass/_case.scss
+++ b/source/_sass/_case.scss
@@ -182,6 +182,11 @@
     fill-opacity: 1;
   }
 
+  &--north-africa #north-africa path {
+    fill: $yellow;
+    fill-opacity: 1;
+  }
+
   &--europe #europe path {
     fill: $yellow;
     fill-opacity: 1;
