--- a/source/_includes/map.html
+++ b/source/_includes/map.html
@@ -31,10 +31,10 @@
 <g id="africa">
   <path id="niger" d="M460.9,302l2.5-0.1l2.3-3.5l3.9-0.7l4.1,2.5l8.8,0.2l6.8-2.8l2.5-2.2l0.2-2.9l4.7-4.8l1.2-10.5l-3.1-6.5l-8-1.9
     l-18.4,14.4l-2.6-0.2l-1.1,10l-9.4,0.9L460.9,302L460.9,302z"/>
-  <path id="algeria" d="M473.9,227.5l-4.1-1.4l-17,3.2l-3.7,2.8l2.3,11.7l-6.8,0.3l-4.1,6.5l-9.7,2.3v4.8l31.9,24.4l5.4,0.5
-    l18.1-14.1l-1.8-2.3l-3.4-0.5l-2-3.4V248l-1.4-1.4l0.2-3.6l-3.6-3.6l-0.5-3.9l1.6-1.1l-0.7-4.1L473.9,227.5L473.9,227.5z"/>
-  <path id="morocco" d="M448.3,232.3h-11.5l-2.3,5l-5.2,2.5l-4.3,11.6l-8.4,5l-11.8,19.4l11.5-0.2l0.5-5.7h2.9v-7.8H430l0.2-10
-    l9.7-2.3l4.1-6.6l6.3-0.2L448.3,232.3L448.3,232.3z"/>
+  <!-- <path id="algeria" d="M473.9,227.5l-4.1-1.4l-17,3.2l-3.7,2.8l2.3,11.7l-6.8,0.3l-4.1,6.5l-9.7,2.3v4.8l31.9,24.4l5.4,0.5
+    l18.1-14.1l-1.8-2.3l-3.4-0.5l-2-3.4V248l-1.4-1.4l0.2-3.6l-3.6-3.6l-0.5-3.9l1.6-1.1l-0.7-4.1L473.9,227.5L473.9,227.5z"/> -->
+  <!-- <path id="morocco" d="M448.3,232.3h-11.5l-2.3,5l-5.2,2.5l-4.3,11.6l-8.4,5l-11.8,19.4l11.5-0.2l0.5-5.7h2.9v-7.8H430l0.2-10
+    l9.7-2.3l4.1-6.6l6.3-0.2L448.3,232.3L448.3,232.3z"/> -->
   <path id="mauretania" d="M404.9,276.7l2.2,2.9l-0.5,12.3l3.2-2.3l2.3-0.5l3.2,1.1l3.6,5l3.4-2.3l16.5-0.2l-4.1-27.6h4.4l-8.2-6.2
     v4.1h-10.3v7.8h-3l-0.4,5.7L404.9,276.7L404.9,276.7z"/>
   <path id="senegal" d="M410.1,290.3l-3.9,2.9l-0.9,1.6l-0.3,1.6l1.5,1l4.8-0.1l3.1-0.8l0.4,1.5l-0.3,2l3,1.5l0.6,0.7l3.9,0.1
@@ -57,12 +57,12 @@
   <path id="benin" d="M458.7,319.5h2.1l0.1-6l2.7-3.9l-0.1-6.8l-2.4-0.1l-4.2,3.3l1.7,3.3L458.7,319.5L458.7,319.5z"/>
   <path id="nigeria" d="M461.6,319.4l3.9,0.2l4.7,5.3l2.3,0.6l1.8-0.9l2.7-0.4l0.9-3.8l3.7-2.5l4-0.2l7.4-13.6l-0.1-3.1l-3.4-2.6
     l-6.8,3l-9.1-0.1l-4.4-2.8l-3.1,0.7l-1.6,2.8l-0.1,8l-2.6,3.7L461.6,319.4L461.6,319.4z"/>
-  <path id="tunisia" d="M474.9,227.3l5.5-2.2l1.8,1.2l0.1,1.4l-0.9,1.1l0.1,2l0.9,0.5v3.5l-1,1.6l0.1,1.1l3.7,1.3l-3,4.6l-1.2-0.1
+  <!-- <path id="tunisia" d="M474.9,227.3l5.5-2.2l1.8,1.2l0.1,1.4l-0.9,1.1l0.1,2l0.9,0.5v3.5l-1,1.6l0.1,1.1l3.7,1.3l-3,4.6l-1.2-0.1
     l-0.2,3.7l-1.3,0.2l-1.1-1l0.3-3.8l-3.6-3.5l-0.5-3.1l1.8-1.4L474.9,227.3L474.9,227.3z"/>
   <path id="libya" d="M480,248l1.6-0.3l0.5-3.6h0.8l3.2-5.2l7.9,2.3l2.1,3.3l7.7,3.5l4-1.7l-0.4-1.7l-1.8-1.7l0.2-1.2l2.9-2.4h5.7
-    l2.2,2.9l4.5,0.7l0.6,36.9l-3.4-0.1l-20.4-10.6l-2.2,1.2l-8.4-2.1l-2.3-3l-3.3-0.5l-1.7-3V248L480,248z"/>
-  <path id="egypt" d="M521.9,243.1l2.7,0.1l5.2,1.4l2.5,0.1l3.1-2.6h1.4l2.6,1.4h3.3h0.6l2.1,6l0.6,1.9l0.5,2.9l-1,0.7l-1.7-0.9
-    l-2-6.4l-1.8-0.1l-0.1,2.2l1.2,3.7l9.4,11.6l0.2,5l-2.7,3.1l-25.6-0.3L521.9,243.1L521.9,243.1z"/>
+    l2.2,2.9l4.5,0.7l0.6,36.9l-3.4-0.1l-20.4-10.6l-2.2,1.2l-8.4-2.1l-2.3-3l-3.3-0.5l-1.7-3V248L480,248z"/> -->
+  <!-- <path id="egypt" d="M521.9,243.1l2.7,0.1l5.2,1.4l2.5,0.1l3.1-2.6h1.4l2.6,1.4h3.3h0.6l2.1,6l0.6,1.9l0.5,2.9l-1,0.7l-1.7-0.9
+    l-2-6.4l-1.8-0.1l-0.1,2.2l1.2,3.7l9.4,11.6l0.2,5l-2.7,3.1l-25.6-0.3L521.9,243.1L521.9,243.1z"/> -->
   <path id="chad" d="M492.8,296l0.1-3l4.7-4.6l1.3-11.3l-3.2-6l2.2-1.1l21.4,11.1l-0.1,10.9l-3.8,3.2v5.6l2.5,4.8h-4.4l-7.2,7.1
     l-0.2,2.2l-5.3-0.1l-0.1,1l-3-0.4l-2.1-3.9l-1.6-0.8l0.2-1.2l2-1.5v-7l-2.7-0.4l-3.3-2.4L492.8,296L492.8,296L492.8,296z"/>
   <path id="south_sudan" inkscape:label="#south sudan" d="M549.1,310.3l-2.9-4.9l-0.3-3.6l-0.7,0.1L545,303l-3.9,5.6l-3.1-1.5
@@ -73,7 +73,7 @@
   <path id="cameroon" d="M477.8,324.3l3.2,3l-0.2,4.6l17.7-0.4l1.4-1.6l-5.1-5.5l-0.8-2l3.2-6l-2.2-4l-1.8-1v-2l2.1-1.4l0.1-6.3
     l-1.7-0.2v3.3l-7.4,13.9l-4.5,0.2l-3.1,2.1L477.8,324.3L477.8,324.3z"/>
   <path id="eritrea" d="M556.7,294.7l-0.2-5.9l4-4.6l1.1,0.8l2,6.5l9.4,7l-1.7,2.1l-6.8-5.9H556.7L556.7,294.7z"/>
-  <path id="djibouti" d="M571.5,301.5l-0.6,3.4l4-0.1l0.1-4.9l-1.5-0.9L571.5,301.5L571.5,301.5z"/>
+  <!-- <path id="djibouti" d="M571.5,301.5l-0.6,3.4l4-0.1l0.1-4.9l-1.5-0.9L571.5,301.5L571.5,301.5z"/> -->
   <path id="ethiopia" d="M549.5,311.8l7.3-16.2h7.2l6.4,5.6l-0.5,4.6h5l0.5,2.8l8,4.8l5,0.2l-9.4,10.1l-13,4h-3.2l-5.7-4.9l-2.3-1
     l-4.4-6.5h-2.9l-0.3-3L549.5,311.8L549.5,311.8z"/>
   <path id="somaliland" d="M575.7,305l4.1,2.8l1.2-0.1l10.1-3.5l1.2,3.7l-0.8,3.1l-2.2,1.7l-5.5-0.4l-7.8-4.8L575.7,305L575.7,305z"
@@ -236,6 +236,52 @@
   <path id="irian_jaya" d="M831.9,339.3l-4.2,0.5l-2.7,2l1.1,2.2l4.5,0.8v0.8l-2.9,2.3l1.4,4.9l1.4,0.1l1.2-4.8h2.2l0.9,4.7l10.8,9
     l0.3,7l3.7,4l1.7-0.1l0.4-24.7l-6.3-4.4l-5.9,4l-2.1,1.3l-3.5-2.2l-0.1-7.1L831.9,339.3L831.9,339.3z"/>
 </g>
+
+
+
+
+
+
+<g id="north-africa">
+  <path id="algeria" d="M473.9,227.5l-4.1-1.4l-17,3.2l-3.7,2.8l2.3,11.7l-6.8,0.3l-4.1,6.5l-9.7,2.3v4.8l31.9,24.4l5.4,0.5
+    l18.1-14.1l-1.8-2.3l-3.4-0.5l-2-3.4V248l-1.4-1.4l0.2-3.6l-3.6-3.6l-0.5-3.9l1.6-1.1l-0.7-4.1L473.9,227.5L473.9,227.5z"/>
+  <path id="jordan" d="M548.9,240.8l-2.5,8.6l-0.1,1.3h3.9l4.3-3.8l0.1-1.4l-1.8-1.8l3.2-2.6l-0.5-2.4l-0.9,0.2l-2.6,1.9H548.9
+    L548.9,240.8z"/>
+  <path id="qatar" d="M592.6,259l-0.5,4l1.5,1.2l1.4-0.1l0.5-5l-1.2-0.9L592.6,259L592.6,259z"/>
+  <path id="kuwait" d="M583.3,247.2l-2.2-1.2l-1.6,1.6l0.2,3.1l3.6,1.4V247.2L583.3,247.2z"/>
+  <path id="saudi" d="M584,253.2l7,9.8l2.3,1.8l1,4.4l10.8,0.9l1.2,0.6l-1.2,5.4l-7.1,4.2l-10.4,3.1l-5.5,5.4l-6.6-3.8l-4,3.5
+    l-5.5-9.1l-3.8-1.7l-1.4-2.1V271L547,254.3l-0.5-3h4l4.8-4.2l0.2-2.1l-1.4-1.4l2.8-2.3l5.9,0.4l10,8.4l5.9-0.3l0.4,1.5L584,253.2
+    L584,253.2z"/>
+  <path id="djibouti" d="M571.5,301.5l-0.6,3.4l4-0.1l0.1-4.9l-1.5-0.9L571.5,301.5L571.5,301.5z"/>
+  <path id="syria" d="M546.7,229.1l-0.3,2.5l2.8,1.2l-0.1,7l2.8-0.1l2.8-2.1l1.1-0.2l6.4-5.1l1.3-7.4l-12.8,1.3l-1.3,3L546.7,229.1
+    L546.7,229.1z"/>
+  <path id="lebanon" d="M546.2,232.4l0.1,1.9l-0.8,3l2.8,0.2l0.2-4.2L546.2,232.4L546.2,232.4z"/>
+  <path id="egypt" d="M521.9,243.1l2.7,0.1l5.2,1.4l2.5,0.1l3.1-2.6h1.4l2.6,1.4h3.3h0.6l2.1,6l0.6,1.9l0.5,2.9l-1,0.7l-1.7-0.9
+    l-2-6.4l-1.8-0.1l-0.1,2.2l1.2,3.7l9.4,11.6l0.2,5l-2.7,3.1l-25.6-0.3L521.9,243.1L521.9,243.1z"/>
+  <path id="tunisia" d="M474.9,227.3l5.5-2.2l1.8,1.2l0.1,1.4l-0.9,1.1l0.1,2l0.9,0.5v3.5l-1,1.6l0.1,1.1l3.7,1.3l-3,4.6l-1.2-0.1
+    l-0.2,3.7l-1.3,0.2l-1.1-1l0.3-3.8l-3.6-3.5l-0.5-3.1l1.8-1.4L474.9,227.3L474.9,227.3z"/>
+  <path id="libya" d="M480,248l1.6-0.3l0.5-3.6h0.8l3.2-5.2l7.9,2.3l2.1,3.3l7.7,3.5l4-1.7l-0.4-1.7l-1.8-1.7l0.2-1.2l2.9-2.4h5.7
+    l2.2,2.9l4.5,0.7l0.6,36.9l-3.4-0.1l-20.4-10.6l-2.2,1.2l-8.4-2.1l-2.3-3l-3.3-0.5l-1.7-3V248L480,248z"/>
+  <path id="iran" d="M569.7,217.9l-1.2,1.3l0.1,2l1.5,2.1l5.4,5.9l-0.8,2.4h-0.9l-0.5,2.4l3,3.9l2.8,0.2l5.6,7.8l3.2,0.2l2.5,1.8
+    l0.1,3.5l9.7,5.7h3.6l2.2-1.9l2.8-0.1l1.6,3.8l10.5,1.5l0.3-3.9l3.5-1.3l0.2-1.4l-2.8-3.8l-6.2-5l3.2-2.9l-0.2-1.3l-4.1-0.6
+    l-1.7-13.7l-0.2-3.1l-11-4.2l-4.9,1.1l-2.7,3.4l-2.4-0.2l-0.7,0.6l-5.4-0.4l-6.8-5l-2.5-2.8l-1.2,0.3l-2.1,2.4L569.7,217.9
+    L569.7,217.9z"/>
+  <path id="malta" d="M492.6,230.5l-1.7,0.3l0.1,1.9l1.5,0.5l0.7-0.6L492.6,230.5L492.6,230.5z"/>
+  <path id="emirates" d="M594,264.9l0.9,3.5l9.9,0.9l0.7-7.1l1.9-1l0.5-2.6l-3.1,0.9l-3.5,5.2L594,264.9L594,264.9z"/>
+  <path id="iraq" d="M564.3,225l-1.6,7.7l-6.5,5.4l0.4,2.5l6.3,0.4l10,8.2l5.6-0.2l0.2-1.9l2.1-2.2l2.9,1.6l0.4-0.4l-5.6-7.4l-2.6-0.2
+    l-3.5-4.5l0.7-3.3l1.1-0.1l0.4-1.5l-4.8-5L564.3,225L564.3,225z"/>
+  <path id="morocco" d="M448.3,232.3h-11.5l-2.3,5l-5.2,2.5l-4.3,11.6l-8.4,5l-11.8,19.4l11.5-0.2l0.5-5.7h2.9v-7.8H430l0.2-10
+    l9.7-2.3l4.1-6.6l6.3-0.2L448.3,232.3L448.3,232.3z"/>
+  <path id="israel" d="M545.3,238.1l-1.6,5l2,6l2.3-8.8v-1.9L545.3,238.1L545.3,238.1z"/>
+  <path id="yemen" d="M572,289.2l1.4,4.3v4.2l3.5,3.1l24.4-9.9l0.2-2.7l-3.9-7l-9.8,3.1l-5.6,5.5l-6.5-3.9L572,289.2L572,289.2z"/>
+  <path id="oman" d="M598.4,280.8l7.4-4.3l1.3-6.2l-1.6-0.9l0.7-6.7l1.4-0.8l1.5,2.4l9,4.7v2.6l-10.9,16l-5,0.2L598.4,280.8
+    L598.4,280.8z"/>
+</g>
+
+
+
+
+
 <g id="north-america">
   <path id="st._lawrence_island_west" d="M69.2,53.3l3.5,6.5l2.2-0.5v-2.2L69.2,53.3L69.2,53.3z"/>
   <path id="alaska-westcopy" d="M93.1,44.9l-8.4,2l1.7,9.5l9.1,2.5l0.5,2L82.5,65l-7.7,12.7l2.7,13.4l4.4,3l3.5-3.2l1,2l-4.2,5
@@ -359,11 +405,11 @@
 </g>
 <path id="malaysia" d="M732.7,315.5l2,4.5l0.5,5.9l2.7,4.2l6.5,3.9l2.5,0.2l-0.5-4.1l-2.1-5.2l-3.1-6.6l-0.3,1.2l-3.8-0.2l-2.7-3.9
   L732.7,315.5L732.7,315.5z"/>
-<path id="kuwait" d="M583.3,247.2l-2.2-1.2l-1.6,1.6l0.2,3.1l3.6,1.4V247.2L583.3,247.2z"/>
-<path id="iraq" d="M564.3,225l-1.6,7.7l-6.5,5.4l0.4,2.5l6.3,0.4l10,8.2l5.6-0.2l0.2-1.9l2.1-2.2l2.9,1.6l0.4-0.4l-5.6-7.4l-2.6-0.2
-  l-3.5-4.5l0.7-3.3l1.1-0.1l0.4-1.5l-4.8-5L564.3,225L564.3,225z"/>
-<path id="jordan" d="M548.9,240.8l-2.5,8.6l-0.1,1.3h3.9l4.3-3.8l0.1-1.4l-1.8-1.8l3.2-2.6l-0.5-2.4l-0.9,0.2l-2.6,1.9H548.9
-  L548.9,240.8z"/>
+<!-- <path id="kuwait" d="M583.3,247.2l-2.2-1.2l-1.6,1.6l0.2,3.1l3.6,1.4V247.2L583.3,247.2z"/> -->
+<!-- <path id="iraq" d="M564.3,225l-1.6,7.7l-6.5,5.4l0.4,2.5l6.3,0.4l10,8.2l5.6-0.2l0.2-1.9l2.1-2.2l2.9,1.6l0.4-0.4l-5.6-7.4l-2.6-0.2
+  l-3.5-4.5l0.7-3.3l1.1-0.1l0.4-1.5l-4.8-5L564.3,225L564.3,225z"/> -->
+<!-- <path id="jordan" d="M548.9,240.8l-2.5,8.6l-0.1,1.3h3.9l4.3-3.8l0.1-1.4l-1.8-1.8l3.2-2.6l-0.5-2.4l-0.9,0.2l-2.6,1.9H548.9
+  L548.9,240.8z"/> -->
 <g id="asia">
   <path id="hainan" d="M759.8,270.2l-2.4,0.7l-1.7,2.1l1.4,2.8l2.1,0.2l2.4-2.1l0.6-2.8L759.8,270.2L759.8,270.2z"/>
   <path id="taiwan" d="M787.5,248.3L784,251l-0.2,5.2l3.1,3.6l0.8-0.7L787.5,248.3L787.5,248.3z"/>
@@ -460,30 +506,30 @@
   <path id="armenia" d="M569.7,209.9l4.8,6.3l-1.4,1.6l-3.4-0.6l-4.2-3.8l0.2-2.5L569.7,209.9L569.7,209.9z"/>
   <path id="azerbaijan" d="M571.4,207.7l-1,1.7l4.7,6.2l1.6-0.5l2.7,2.8l1.2-5l2.9,0.5l-0.1-1.4l-4.8-4.2l-0.9,2.5L571.4,207.7
     L571.4,207.7z"/>
-  <path id="iran" d="M569.7,217.9l-1.2,1.3l0.1,2l1.5,2.1l5.4,5.9l-0.8,2.4h-0.9l-0.5,2.4l3,3.9l2.8,0.2l5.6,7.8l3.2,0.2l2.5,1.8
+  <!-- <path id="iran" d="M569.7,217.9l-1.2,1.3l0.1,2l1.5,2.1l5.4,5.9l-0.8,2.4h-0.9l-0.5,2.4l3,3.9l2.8,0.2l5.6,7.8l3.2,0.2l2.5,1.8
     l0.1,3.5l9.7,5.7h3.6l2.2-1.9l2.8-0.1l1.6,3.8l10.5,1.5l0.3-3.9l3.5-1.3l0.2-1.4l-2.8-3.8l-6.2-5l3.2-2.9l-0.2-1.3l-4.1-0.6
     l-1.7-13.7l-0.2-3.1l-11-4.2l-4.9,1.1l-2.7,3.4l-2.4-0.2l-0.7,0.6l-5.4-0.4l-6.8-5l-2.5-2.8l-1.2,0.3l-2.1,2.4L569.7,217.9
-    L569.7,217.9z"/>
+    L569.7,217.9z"/> -->
   <path id="turkey" d="M558.7,209.2l-2.2,2.4l-8.2-0.2l-4.9-2.9l-4.8-0.1l-5.5,3.9l-5.2,0.2l-0.5,2.9h-5.9l-2.3,2.1v1.2l1.4,1.2v1.3
     l-0.6,1.5l0.6,1.3l1.9-0.9l1.9,2l-0.5,1.4l-0.7,0.9l1,1.2l5.2,1.1l3.6-1.5V226l1.8,0.4l4.2,2.5l4.6-0.7l2-1.9l1.3,0.5v2.1h1.8
     l1.5-2.9l13.4-1.4l5.8-0.7l-1.5-2v-2.7l1.2-1.4l-4.3-3.4l0.2-2.9h-2.3L558.7,209.2L558.7,209.2z"/>
-  <path id="yemen" d="M572,289.2l1.4,4.3v4.2l3.5,3.1l24.4-9.9l0.2-2.7l-3.9-7l-9.8,3.1l-5.6,5.5l-6.5-3.9L572,289.2L572,289.2z"/>
+  <!-- <path id="yemen" d="M572,289.2l1.4,4.3v4.2l3.5,3.1l24.4-9.9l0.2-2.7l-3.9-7l-9.8,3.1l-5.6,5.5l-6.5-3.9L572,289.2L572,289.2z"/>
   <path id="oman" d="M598.4,280.8l7.4-4.3l1.3-6.2l-1.6-0.9l0.7-6.7l1.4-0.8l1.5,2.4l9,4.7v2.6l-10.9,16l-5,0.2L598.4,280.8
-    L598.4,280.8z"/>
-  <path id="emirates" d="M594,264.9l0.9,3.5l9.9,0.9l0.7-7.1l1.9-1l0.5-2.6l-3.1,0.9l-3.5,5.2L594,264.9L594,264.9z"/>
-  <path id="qatar" d="M592.6,259l-0.5,4l1.5,1.2l1.4-0.1l0.5-5l-1.2-0.9L592.6,259L592.6,259z"/>
-  <path id="saudi" d="M584,253.2l7,9.8l2.3,1.8l1,4.4l10.8,0.9l1.2,0.6l-1.2,5.4l-7.1,4.2l-10.4,3.1l-5.5,5.4l-6.6-3.8l-4,3.5
+    L598.4,280.8z"/> -->
+  <!-- <path id="emirates" d="M594,264.9l0.9,3.5l9.9,0.9l0.7-7.1l1.9-1l0.5-2.6l-3.1,0.9l-3.5,5.2L594,264.9L594,264.9z"/> -->
+  <!-- <path id="qatar" d="M592.6,259l-0.5,4l1.5,1.2l1.4-0.1l0.5-5l-1.2-0.9L592.6,259L592.6,259z"/> -->
+  <!-- <path id="saudi" d="M584,253.2l7,9.8l2.3,1.8l1,4.4l10.8,0.9l1.2,0.6l-1.2,5.4l-7.1,4.2l-10.4,3.1l-5.5,5.4l-6.6-3.8l-4,3.5
     l-5.5-9.1l-3.8-1.7l-1.4-2.1V271L547,254.3l-0.5-3h4l4.8-4.2l0.2-2.1l-1.4-1.4l2.8-2.3l5.9,0.4l10,8.4l5.9-0.3l0.4,1.5L584,253.2
-    L584,253.2z"/>
-  <path id="syria" d="M546.7,229.1l-0.3,2.5l2.8,1.2l-0.1,7l2.8-0.1l2.8-2.1l1.1-0.2l6.4-5.1l1.3-7.4l-12.8,1.3l-1.3,3L546.7,229.1
+    L584,253.2z"/> -->
+  <!-- <path id="syria" d="M546.7,229.1l-0.3,2.5l2.8,1.2l-0.1,7l2.8-0.1l2.8-2.1l1.1-0.2l6.4-5.1l1.3-7.4l-12.8,1.3l-1.3,3L546.7,229.1
     L546.7,229.1z"/>
-  <path id="lebanon" d="M546.2,232.4l0.1,1.9l-0.8,3l2.8,0.2l0.2-4.2L546.2,232.4L546.2,232.4z"/>
+  <path id="lebanon" d="M546.2,232.4l0.1,1.9l-0.8,3l2.8,0.2l0.2-4.2L546.2,232.4L546.2,232.4z"/> -->
 </g>
-<path id="israel" d="M545.3,238.1l-1.6,5l2,6l2.3-8.8v-1.9L545.3,238.1L545.3,238.1z"/>
+<!-- <path id="israel" d="M545.3,238.1l-1.6,5l2,6l2.3-8.8v-1.9L545.3,238.1L545.3,238.1z"/> -->
 <path id="cyprus" d="M543.2,229.8l1.2,0.9l-3.8,3.6l-1.8-0.1l-1.3-0.9l0.2-1.8l2.8-0.2L543.2,229.8L543.2,229.8z"/>
 <path id="majorca" d="M461.1,217.2l-1.6,0.5l0.4,1.4h2.3l1-1.1L461.1,217.2L461.1,217.2z"/>
 <path id="sicily" d="M492.4,223l-1.5-0.8l-5,0.8l0.2,1.3l4.5,2.2l0.7,0.7l1.2,0.2L492.4,223L492.4,223z"/>
-<path id="malta" d="M492.6,230.5l-1.7,0.3l0.1,1.9l1.5,0.5l0.7-0.6L492.6,230.5L492.6,230.5z"/>
+<!-- <path id="malta" d="M492.6,230.5l-1.7,0.3l0.1,1.9l1.5,0.5l0.7-0.6L492.6,230.5L492.6,230.5z"/> -->
 <g id="europe">
   <path id="estonia" d="M517.8,143.7l-5.6-0.2l-3.5,2.2v1.6l2.3,2.2l7.2,1.2L517.8,143.7L517.8,143.7z"/>
   <path id="norway" d="M515.5,102.1l2-1.5l-0.2-1.7l-1.3-0.7l0.2-2h1.1v-1.1l-4.8-1.3l-7.1,0.7l-0.7,3.1l-1.6-0.5l-1.1-1.8l-3.5,0.2
