Seperate south asia

--- a/source/_layouts/case_template.html
+++ b/source/_layouts/case_template.html
@@ -90,12 +90,16 @@ layout: default
           <div class="regions__map regions--latin-america">
             {% include map.html %}
           </div>
-        {% elsif map_region == 'East Asia and Pacific' or map_region == 'South Asia' %}
+        {% elsif map_region == 'East Asia and Pacific' %}
           <div class="regions__map regions--asia">
             {% include map.html %}
           </div>
+          {% elsif map_region == 'South Asia' %}
+            <div class="regions__map regions--south-asia">
+              {% include map.html %}
+            </div>
         {% elsif map_region == 'Sub-Saharan Africa'%}
-          <div class="regions__map regions--africa">
+          <div class="regions__map regions--sub-saharan-africa">
             {% include map.html %}
           </div>
         {% elsif map_region == 'Middle East and North Africa' %}
