--- a/source/_includes/map.html
+++ b/source/_includes/map.html
@@ -28,7 +28,7 @@
 <path id="amchitka_west" d="M12.3,111.6l-1.3-1.8l-1.3,0.5v2.5l1.5,1L12.3,111.6L12.3,111.6z"/>
 <path id="attu_west" d="M1.5,99.7l1.7,1.2l-0.5,1.3H1.5V99.7L1.5,99.7z"/>
 <path id="kerguelen" d="M622.8,499.6l-0.2,4.3l5.9,1.4l1.4-3.5l-2.1,0.6L625,503l-0.8-3.2L622.8,499.6L622.8,499.6z"/>
-<g id="africa">
+<g id="sub-saharan-africa">
   <path id="niger" d="M460.9,302l2.5-0.1l2.3-3.5l3.9-0.7l4.1,2.5l8.8,0.2l6.8-2.8l2.5-2.2l0.2-2.9l4.7-4.8l1.2-10.5l-3.1-6.5l-8-1.9
     l-18.4,14.4l-2.6-0.2l-1.1,10l-9.4,0.9L460.9,302L460.9,302z"/>
   <!-- <path id="algeria" d="M473.9,227.5l-4.1-1.4l-17,3.2l-3.7,2.8l2.3,11.7l-6.8,0.3l-4.1,6.5l-9.7,2.3v4.8l31.9,24.4l5.4,0.5
@@ -410,6 +410,32 @@
   l-3.5-4.5l0.7-3.3l1.1-0.1l0.4-1.5l-4.8-5L564.3,225L564.3,225z"/> -->
 <!-- <path id="jordan" d="M548.9,240.8l-2.5,8.6l-0.1,1.3h3.9l4.3-3.8l0.1-1.4l-1.8-1.8l3.2-2.6l-0.5-2.4l-0.9,0.2l-2.6,1.9H548.9
   L548.9,240.8z"/> -->
+
+
+<g id="south-asia">
+  <path id="afghanistan" d="M614.1,227.1l1.6,12.5l4,0.9l0.4,2.2l-2.8,2.4l5.3,4.3l10.3-3.7l0.8-4.4l6.5-4l2.5-9.4l1.8-2l-1.9-3.3
+    l6.3-3.9l-0.8-1.1l-2.9,0.2l-0.3,2.7H641l-0.1-3.6l-1.2-1.5l-2.1,1.9l0.1,1.8l-3.2,1.2l-5.8-0.4l-7.6,8L614.1,227.1L614.1,227.1z"
+    />
+  <path id="pakistan" d="M623.1,249.8l2.6,3.9l-0.2,2l-3.5,1.4l-0.2,3.2h4l1.4-1.1h7.5l6.8,6l0.9-2.9h5.1l0.1-3.6l-5.2-5l1.1-2.7
+    l5.3-0.4l7.2-14.9l-4-3.1l-1.5-5.2l9.6-0.9l-5.7-8.1l-3-0.8l-1.2,1.5l-0.9,0.1l-5.7,3.6l1.9,3.1l-2.1,2.2l-2.6,9.6l-6.4,4.1
+    l-0.9,4.5L623.1,249.8L623.1,249.8z"/>
+  <path id="india" d="M671,313l4.6-2.2l2.7-9.8l-0.1-12.1l15.6-16.8v-4l3.2-1.2l-0.1-4.6l-3.5-6.7l2-3.6l4.3,4l5.6,0.3v2.2l-1.7,1.9
+    l0.4,1l3,0.1l0.6,3.4h0.9l2.2-4l1.1-10.5l3.7-2.6l0.1-3.6l-1.5-2.9l-2.3-0.1l-9.2,6.1l0.6,3.9h-6.5l-2.3-2.8l-1.2,0.2l0.4,3.9
+    l-14-1l-8.7-3.9l-0.5-4.8l-5.8-3.6l-0.1-7.4l-4-4.5l-9.1,0.9l1,4l4.5,3.6l-7.7,15.8L644,252l-0.8,1.9l5.1,4.7l-0.2,4.8l-5.2-0.1
+    l-0.6,2.4l4.3-0.2l0.1,1.9l-3.1,1.6l2,3.7l3.8,1.2l2.3-1.7l1.1-3.1l1.4-0.6l1.6,1.6l-0.5,4l-1.1,1.9l0.2,3.2L671,313L671,313z"/>
+  <path id="nepal" d="M671.2,242.6l0.5,4.3l8.1,3.7l13,1l-0.5-3.1l-8.7-2.4l-7.3-4.4L671.2,242.6L671.2,242.6z"/>
+  <path id="bhutan" d="M695.4,248.1l1.5,2.1h5.2l-0.5-2.9L695.4,248.1L695.4,248.1z"/>
+  <path id="bangladesh" d="M695.6,253.1l-1.3,2.4l3.4,6.5l0.1,5l0.6,1.4l4,0.1l2.3-2.2l1.6,1l0.3,3.1l1.3-0.8l0.1-3.9l-1.1-0.1
+    l-0.7-3.3l-2.8-0.1l-0.7-1.9l1.7-2.3v-1.1h-4.9L695.6,253.1L695.6,253.1z"/>
+  <path id="sri_lanka" d="M680.5,308l0.2,2.7l0.2,2l-1.5,0.2l0.7,4.5l2.2,1.2l3.4-2l-1-4.7l0.2-1.7l-3.2-3L680.5,308L680.5,308z"/>
+  <path id="male" d="M656.4,320.8l0.3,2.6l1.7,0.6l0.3-2.3L656.4,320.8L656.4,320.8z"/>
+  <path id="maldive" d="M658.5,326.3l-0.2,3.2l1.2,0.6l1.1-2.1L658.5,326.3L658.5,326.3z"/>
+  <path id="gan" d="M658.8,332.6l-1.1,1.1l1.2,1.1l1.5-1.1L658.8,332.6L658.8,332.6z"/>
+</g>
+
+
+
+
 <g id="asia">
   <path id="hainan" d="M759.8,270.2l-2.4,0.7l-1.7,2.1l1.4,2.8l2.1,0.2l2.4-2.1l0.6-2.8L759.8,270.2L759.8,270.2z"/>
   <path id="taiwan" d="M787.5,248.3L784,251l-0.2,5.2l3.1,3.6l0.8-0.7L787.5,248.3L787.5,248.3z"/>
@@ -476,7 +502,7 @@
     L630.2,211.8L630.2,211.8z"/>
   <path id="kirgizstan" d="M636.8,199.2l-0.3,2.5l0.2,1.6l8.7,2.9l-7.6,3.1l-0.9-0.7l-1.7,1.1l0.1,0.6l0.9,0.4l5.4,0.1l2.7-0.8
     l3.5-4.4l4.4,0.8l5.3-7.3l-14.1-1.9l-2,4.7l-2.5-2.6L636.8,199.2L636.8,199.2z"/>
-  <path id="afghanistan" d="M614.1,227.1l1.6,12.5l4,0.9l0.4,2.2l-2.8,2.4l5.3,4.3l10.3-3.7l0.8-4.4l6.5-4l2.5-9.4l1.8-2l-1.9-3.3
+  <!-- <path id="afghanistan" d="M614.1,227.1l1.6,12.5l4,0.9l0.4,2.2l-2.8,2.4l5.3,4.3l10.3-3.7l0.8-4.4l6.5-4l2.5-9.4l1.8-2l-1.9-3.3
     l6.3-3.9l-0.8-1.1l-2.9,0.2l-0.3,2.7H641l-0.1-3.6l-1.2-1.5l-2.1,1.9l0.1,1.8l-3.2,1.2l-5.8-0.4l-7.6,8L614.1,227.1L614.1,227.1z"
     />
   <path id="pakistan" d="M623.1,249.8l2.6,3.9l-0.2,2l-3.5,1.4l-0.2,3.2h4l1.4-1.1h7.5l6.8,6l0.9-2.9h5.1l0.1-3.6l-5.2-5l1.1-2.7
@@ -489,7 +515,7 @@
   <path id="nepal" d="M671.2,242.6l0.5,4.3l8.1,3.7l13,1l-0.5-3.1l-8.7-2.4l-7.3-4.4L671.2,242.6L671.2,242.6z"/>
   <path id="bhutan" d="M695.4,248.1l1.5,2.1h5.2l-0.5-2.9L695.4,248.1L695.4,248.1z"/>
   <path id="bangladesh" d="M695.6,253.1l-1.3,2.4l3.4,6.5l0.1,5l0.6,1.4l4,0.1l2.3-2.2l1.6,1l0.3,3.1l1.3-0.8l0.1-3.9l-1.1-0.1
-    l-0.7-3.3l-2.8-0.1l-0.7-1.9l1.7-2.3v-1.1h-4.9L695.6,253.1L695.6,253.1z"/>
+    l-0.7-3.3l-2.8-0.1l-0.7-1.9l1.7-2.3v-1.1h-4.9L695.6,253.1L695.6,253.1z"/> -->
   <path id="burma" d="M729.4,303.6l-2.8-4.4l2-2.8l-1.9-3.5l-1.8-0.3l-0.3-5.9l-2.7-5.2l-0.8,1.2l-1.8,3l-2.2,0.3l-1.1-1.5l-0.6-4
     l-1.7-3.2l-6.8-6.5l1.7-1.1l0.3-4.7l2.5-4.2l1.1-10.4l3.6-2.5l0.1-3.8l2.2,0.7l3.4,4.9l-2.5,5.4l1.7,4.3l4.2,1.7l0.8,4.6l5.7,0.9
     l-1.6,2.7l-7.2,2.8l-0.8,4.6l5.3,6.8l0.2,3.6l-1.2,1.2l0.1,1.1l3.9,5.8l0.1,6L729.4,303.6L729.4,303.6z"/>
