--- a/source/_sass/_resources.scss
+++ b/source/_sass/_resources.scss
@@ -3,28 +3,34 @@
     padding-bottom: 30px;
     h1 {text-transform: uppercase;}
   }
-  .modal {
-      &__content {
-        max-height: 40vh;
-        @include breakpoint($medium) {
-          height: auto;
-          overflow-y: initial;
-          padding: 30px 0;
-        }
-        @include breakpoint($small-only) {
-          height: auto;
-          overflow-y: initial;
-          padding: 30px 0;
-        }
+.modal {
+    &__content {
+      max-height: 40vh;
+      @include breakpoint($medium) {
+        height: auto;
+        overflow-y: initial;
+        padding: 30px 0;
       }
       @include breakpoint($small-only) {
-        width: 100%;
-        left:0;
-        margin: 0;
-        overflow-y: scroll;
-        height: 90vh;
+        height: auto;
+        overflow-y: initial;
+        padding: 30px 0;
       }
     }
+    @include breakpoint($small-only) {
+      width: 100%;
+      left:0;
+      margin: 0;
+      overflow-y: scroll;
+      height: 90vh;
+    }
+  }
+  .modal__resource-type > span {
+      font-weight: 600;
+      text-transform: uppercase;
+      color: white;
+      margin-right: 10px;
+  }
 }
 
 
