Seperate europe and east asia

--- a/source/_sass/_case.scss
+++ b/source/_sass/_case.scss
@@ -172,7 +172,7 @@
     fill-opacity: 1;
   }
 
-  &--asia #asia path {
+  &--east-asia #east-asia path {
     fill: $yellow;
     fill-opacity: 1;
   }
