--- a/source/_includes/map.html
+++ b/source/_includes/map.html
@@ -403,8 +403,8 @@
     L314.2,438.9z"/>
   <path id="belize" d="M204.6,282.4l-0.1,3.6h0.8l2.9-5.3h-1.9L204.6,282.4L204.6,282.4z"/>
 </g>
-<path id="malaysia" d="M732.7,315.5l2,4.5l0.5,5.9l2.7,4.2l6.5,3.9l2.5,0.2l-0.5-4.1l-2.1-5.2l-3.1-6.6l-0.3,1.2l-3.8-0.2l-2.7-3.9
-  L732.7,315.5L732.7,315.5z"/>
+<!-- <path id="malaysia" d="M732.7,315.5l2,4.5l0.5,5.9l2.7,4.2l6.5,3.9l2.5,0.2l-0.5-4.1l-2.1-5.2l-3.1-6.6l-0.3,1.2l-3.8-0.2l-2.7-3.9
+  L732.7,315.5L732.7,315.5z"/> -->
 <!-- <path id="kuwait" d="M583.3,247.2l-2.2-1.2l-1.6,1.6l0.2,3.1l3.6,1.4V247.2L583.3,247.2z"/> -->
 <!-- <path id="iraq" d="M564.3,225l-1.6,7.7l-6.5,5.4l0.4,2.5l6.3,0.4l10,8.2l5.6-0.2l0.2-1.9l2.1-2.2l2.9,1.6l0.4-0.4l-5.6-7.4l-2.6-0.2
   l-3.5-4.5l0.7-3.3l1.1-0.1l0.4-1.5l-4.8-5L564.3,225L564.3,225z"/> -->
@@ -436,7 +436,9 @@
 
 
 
-<g id="asia">
+
+
+<g id="east-asia">
   <path id="hainan" d="M759.8,270.2l-2.4,0.7l-1.7,2.1l1.4,2.8l2.1,0.2l2.4-2.1l0.6-2.8L759.8,270.2L759.8,270.2z"/>
   <path id="taiwan" d="M787.5,248.3L784,251l-0.2,5.2l3.1,3.6l0.8-0.7L787.5,248.3L787.5,248.3z"/>
   <path id="kyushu" d="M803.2,216.4l-1.6,1.6l0.7,2.3l1.4,0.1l1,5l1.2,1.2l2-1.8l0.9-3.3l-2.5-3.6L803.2,216.4L803.2,216.4z"/>
@@ -457,7 +459,11 @@
   <path id="attu" d="M872.5,110.9l1.2,2.2l2.1-0.1l0.4-1.5L872.5,110.9L872.5,110.9z"/>
   <path id="st._lawrence_island" d="M881.3,38.4l-2.4,1.5l-0.6,2l1.1,1.3l2.5-0.8l2.5,0.8l1.4,0.4l-0.1-4.6L881.3,38.4L881.3,38.4z"
     />
-  <path id="russia" d="M818,72.9l1.8,6.1l3.5,1l3.5-5.6l-2-3.8l0.8-3.3h5.3l-1.3,2.5L830,79l-7.5,18.7l0.8,4.1l-0.2,6.8l14.1,20.5
+    <path id="malaysia" d="M732.7,315.5l2,4.5l0.5,5.9l2.7,4.2l6.5,3.9l2.5,0.2l-0.5-4.1l-2.1-5.2l-3.1-6.6l-0.3,1.2l-3.8-0.2l-2.7-3.9
+      L732.7,315.5L732.7,315.5z"/>
+    <!-- <path id="malaysia" d="M732.7,315.5l2,4.5l0.5,5.9l2.7,4.2l6.5,3.9l2.5,0.2l-0.5-4.1l-2.1-5.2l-3.1-6.6l-0.3,1.2l-3.8-0.2l-2.7-3.9
+      L732.7,315.5L732.7,315.5z"/> -->
+  <!-- <path id="russia" d="M818,72.9l1.8,6.1l3.5,1l3.5-5.6l-2-3.8l0.8-3.3h5.3l-1.3,2.5L830,79l-7.5,18.7l0.8,4.1l-0.2,6.8l14.1,20.5
     l2.8,0.8l0.2-16.7l2.8-2.5l-3-6.6l2.5-2.8L837,94l-3,0.2L833,82l7.8-2l0.5-3.6l4-1l2.3,2l2.8-11.1l4.8-8.1l3.8-2l3.3,0.2v-3.8
     l-5.3-1l-7.3-6.1l3.5-4l-3-6.8l2.5-2.5l3,4l7.5,2.8l8.3,0.8l1-3.5l-4.3-4.3l4.8-6.6l-10.8-3.8l-2.8,5.6l-3.5-4.6l-19.8-6.8
     L816.9,19l-2.8,1.5V22l4,2l-0.5,4.8l-7.3-3l-16.1,6.3l-2.8-5.8h-11.1l-5,5.3l-17.8-4l-16.3,3.3l-2,5.1l2.5,0.8l-0.2,3.8l-15.8,1.8
@@ -473,7 +479,7 @@
     L692,159l3.3-5.1l9.3,3l2,4.1l4,0.2l2.5-1.8l6.8-0.2l0.8,1.8l7.8,0.5l5.3-5.6l10.8,1.3l3.3-1.3l1-6.1l-3.3-7.3l3.3-2.8h10.3
     l9.8,11.6l12.6,7.1h3.8l0.5-3l4.5-2.8l0.5,16.5l-4,0.2v4.1l2.3,2.8l-0.4,3.6l1.7,0.7l1-2.5l1.5,0.5l1,1l4.5-1l4.5-13.2l0.5-16.5
     l-5.8-13.2l-7.3-8.9l-3.5,0.5v2.8l-8.5-3.3l3.3-7.1l2.8-18.7l11.6-3.5l5.5-3.5h6l-1.5,2l1.5,2.5l5.3-5.6l3,0.2l-0.5-3.3l-4.8-1
-    l3.3-11.9L818,72.9L818,72.9z"/>
+    l3.3-11.9L818,72.9L818,72.9z"/> -->
   <path id="china" d="M670.4,170.1l-3.5,8.7l-4.8-0.2l-5,11l4.3,5.4l-8.8,12.1l-4.5-0.8l-3,3.8l0.8,2.3l3.5,0.2l1.8,4.1l3.5,0.8
     l10.8,13.9v7.1l5.3,3.3l5.8-1l7.3,4.3l8.8,2.5l4.3-0.5l4.8-0.5l10-6.6l3.3,0.5l1.2,3l2.8,0.8l3.8,5.6l-2.5,5.6l1.5,3.8l4.3,1.5
     l0.8,4.6l5,0.5l0.8-2.3l7.3-3.8l4.5,0.2l5.3,5.8l3.5-1.5l2.3,0.2l1,2.8l1.8,0.2l2.5-3.5l10-3.8l9-10.9l3-10.4l-0.2-6.8l-3.8-0.8
@@ -488,10 +494,10 @@
     l-1.6,0.8l-1.9,5.9l-3.1-0.3l-3.6,4.3L778.3,194.3L778.3,194.3z"/>
   <path id="south_korea" d="M788.3,198.2l6.2,5l1,4.9l-0.2,2.6l-3,3.4l-2.6,0.1l-3-6.4l-1.1-3l1.2-0.9l-0.3-1.3l-1.5-0.7L788.3,198.2
     L788.3,198.2z"/>
-  <path id="kazakhstan" d="M576.7,188.6l4.1-1.8l4.6-0.2l0.3,7H583l-2,3.3l2.7,4.4l4,2.2l0.4,2.6l1.5-0.5l1.3-1.6l2.2,0.5l1.1,2.2
+  <!-- <path id="kazakhstan" d="M576.7,188.6l4.1-1.8l4.6-0.2l0.3,7H583l-2,3.3l2.7,4.4l4,2.2l0.4,2.6l1.5-0.5l1.3-1.6l2.2,0.5l1.1,2.2
     h2.8v-2.9l-1.7-5.1l-0.8-4.1l5-2.2l6.8,1.1l4.3,4.3l9.6-0.9l5.4,7.6l6.3,0.3l1.7-2.9l2.2-0.5l0.3-3.2l3.3-0.2l1.7,2.1l1.7-4.1
     l15,2.1l2.5-3.3l-4.3-5.2l5.7-12.4l4.6,0.3l3.2-7.6l-6.3-0.6l-3.6-3.5l-10,1.2l-12.9-12.4l-4.5,4l-13.8-6.2l-16.9,8.3l-0.5,5.9
-    l4,4.6l-7.7,4.4l-10-0.2l-2.1-3.1l-7.8-0.4l-7.4,4.8l-0.2,6.5L576.7,188.6L576.7,188.6z"/>
+    l4,4.6l-7.7,4.4l-10-0.2l-2.1-3.1l-7.8-0.4l-7.4,4.8l-0.2,6.5L576.7,188.6L576.7,188.6z"/> -->
   <path id="turkmenistan" d="M593.8,207.6l-0.6,2.6H589v3.6l4.5,2.9l-1.4,4v1.9l1.8,0.3l2.5-3.2l5.5-1.2l11.8,4.5l0.2,3.2l6.6,0.6
     l7.4-7.8l-0.9-2.5l-4.9-1.1l-13.8-9l-0.6-3.2h-5.2l-2.3,4.3h-2.3L593.8,207.6L593.8,207.6z"/>
   <path id="uzbekistan" d="M628.9,219.1l3.1,0.2V214l-2.9-1.7l4.9-6.2h2l2,2.3l5.2-2l-7.2-2.5l-0.3-1.5l-1.7,0.4l-1.7,2.9l-7.3-0.2
@@ -557,6 +563,27 @@
 <path id="sicily" d="M492.4,223l-1.5-0.8l-5,0.8l0.2,1.3l4.5,2.2l0.7,0.7l1.2,0.2L492.4,223L492.4,223z"/>
 <!-- <path id="malta" d="M492.6,230.5l-1.7,0.3l0.1,1.9l1.5,0.5l0.7-0.6L492.6,230.5L492.6,230.5z"/> -->
 <g id="europe">
+  <path id="kazakhstan" d="M576.7,188.6l4.1-1.8l4.6-0.2l0.3,7H583l-2,3.3l2.7,4.4l4,2.2l0.4,2.6l1.5-0.5l1.3-1.6l2.2,0.5l1.1,2.2
+    h2.8v-2.9l-1.7-5.1l-0.8-4.1l5-2.2l6.8,1.1l4.3,4.3l9.6-0.9l5.4,7.6l6.3,0.3l1.7-2.9l2.2-0.5l0.3-3.2l3.3-0.2l1.7,2.1l1.7-4.1
+    l15,2.1l2.5-3.3l-4.3-5.2l5.7-12.4l4.6,0.3l3.2-7.6l-6.3-0.6l-3.6-3.5l-10,1.2l-12.9-12.4l-4.5,4l-13.8-6.2l-16.9,8.3l-0.5,5.9
+    l4,4.6l-7.7,4.4l-10-0.2l-2.1-3.1l-7.8-0.4l-7.4,4.8l-0.2,6.5L576.7,188.6L576.7,188.6z"/>
+  <path id="russia" d="M818,72.9l1.8,6.1l3.5,1l3.5-5.6l-2-3.8l0.8-3.3h5.3l-1.3,2.5L830,79l-7.5,18.7l0.8,4.1l-0.2,6.8l14.1,20.5
+    l2.8,0.8l0.2-16.7l2.8-2.5l-3-6.6l2.5-2.8L837,94l-3,0.2L833,82l7.8-2l0.5-3.6l4-1l2.3,2l2.8-11.1l4.8-8.1l3.8-2l3.3,0.2v-3.8
+    l-5.3-1l-7.3-6.1l3.5-4l-3-6.8l2.5-2.5l3,4l7.5,2.8l8.3,0.8l1-3.5l-4.3-4.3l4.8-6.6l-10.8-3.8l-2.8,5.6l-3.5-4.6l-19.8-6.8
+    L816.9,19l-2.8,1.5V22l4,2l-0.5,4.8l-7.3-3l-16.1,6.3l-2.8-5.8h-11.1l-5,5.3l-17.8-4l-16.3,3.3l-2,5.1l2.5,0.8l-0.2,3.8l-15.8,1.8
+    l1,5.1L712.1,45l3.5-6.6l-14.8-0.8l1.3,6.8l-4.8,2.3l-4-3.8L677,45.6l-6.3,5.8l-0.2,3.5l-4,0.2l-0.5-4L678.7,40v-7.6l-8.3-2.3
+    l-10.8,3.5l-4.5-4.6h-2l-2.5,5.1l2,2.3l-14.3,7.8L626,53.7l-7.5,10.4v4.3l8,3.3l-4,3l-8.5-3l-3.5,3l-5.3-6.1l-1,2.3l5.8,18.2
+    l1.5,0.5l4-2l2,1.5v3.3l-3.8-1.5l-2.3,1.8l1.5,3.3l-1.3,8.6l-7.8,0.8l-0.5-2.8l4.5-2.8l1-7.6l-5-6.6L602,74.2l-8-1.3l-0.8,4.1
+    l1.5,2l-3.3,2.8l1.3,7.6l4.8,2l1,5.6l-4.8-3l-12.3-2.3l-1.5,4.1l-9.8,3.5l-1.5-2.5l-12.8,7.1l-0.2,4.8l-5,0.8l1.5-3.5v-3.5l-5-1.8
+    l-3.3,1.3l2.8,5.3l2,3.5v2.8l-3.8-0.8L544,112l-3.8,4.1l2,3.5l-8.5-0.2l2.8,3.6l-0.8,1.5h-4.5l-3.3-2.3l-0.8-6.3l-5.3-2v-2.5
+    l11.1,2.3l6,0.5l2.5-3.8l-2.3-4.1L523,100l-5.5,1.4l-1.9,1.6l0.6,3.8l2.4,0.4l-0.5,5.9l7.3,17.1l-5.3,8.3l-0.4,1.9l2.7,1.9
+    l-2.4,1.6h-1.6l0.3,7.4l2.2,3.1v3l2.8,0.3l4.3,1.6l4.6,6.3v1.7l-1.5,2.6l3.4-0.2l3.3,1l4.5,6.4l11.1,1l-0.5,7.6l-3.8,3.3l0.8,1.3
+    l-3.8,4.1l-1,3.8l2.3,3.3l7.3,2.5l3-1.8l19.3,7.3l0.8-2l-4-3.8v-4.8l-2.5-0.8l0.5-4.1l4-4.8l-7.2-5.4l0.5-7.5l7.7-5.1l9,0.5
+    l1.5,2.8l9.3,0.5l6.8-3.8l-3.5-3.8l0.8-7.1l17.6-8.6l13.5,6.1l4.5-4.1l13.3,12.7l10-1l3.5,3.5l9.5,1l6.3-8.6l8,3.6l4.3,0.8l4.3-3.8
+    L692,159l3.3-5.1l9.3,3l2,4.1l4,0.2l2.5-1.8l6.8-0.2l0.8,1.8l7.8,0.5l5.3-5.6l10.8,1.3l3.3-1.3l1-6.1l-3.3-7.3l3.3-2.8h10.3
+    l9.8,11.6l12.6,7.1h3.8l0.5-3l4.5-2.8l0.5,16.5l-4,0.2v4.1l2.3,2.8l-0.4,3.6l1.7,0.7l1-2.5l1.5,0.5l1,1l4.5-1l4.5-13.2l0.5-16.5
+    l-5.8-13.2l-7.3-8.9l-3.5,0.5v2.8l-8.5-3.3l3.3-7.1l2.8-18.7l11.6-3.5l5.5-3.5h6l-1.5,2l1.5,2.5l5.3-5.6l3,0.2l-0.5-3.3l-4.8-1
+    l3.3-11.9L818,72.9L818,72.9z"/>
   <path id="estonia" d="M517.8,143.7l-5.6-0.2l-3.5,2.2v1.6l2.3,2.2l7.2,1.2L517.8,143.7L517.8,143.7z"/>
   <path id="norway" d="M515.5,102.1l2-1.5l-0.2-1.7l-1.3-0.7l0.2-2h1.1v-1.1l-4.8-1.3l-7.1,0.7l-0.7,3.1l-1.6-0.5l-1.1-1.8l-3.5,0.2
     L498,99l-1.6,0.7l-0.9-1.8l-7.3,5.9l1.5,1.7l-2.8,1.3l-6.2,12.4l-2.2,1.5l0.2,1.1l2.2,1.1l-0.5,2.4l-3.7-0.2l-1.1-1.3l-2.4,2.8
