--- a/source/_layouts/case_template.html
+++ b/source/_layouts/case_template.html
@@ -91,7 +91,7 @@ layout: default
             {% include map.html %}
           </div>
         {% elsif map_region == 'East Asia and Pacific' %}
-          <div class="regions__map regions--asia">
+          <div class="regions__map regions--east-asia">
             {% include map.html %}
           </div>
           {% elsif map_region == 'South Asia' %}
