Add team page with basic layout

--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -30,6 +30,7 @@ $gray: rgba(black, 0.7);
 @import 'events';
 @import 'introduction';
 @import 'modals';
+@import 'team';
 
 .material-icons {
   font-family: 'Material Icons';
